# drake

./: .gitignore
examples/complete_robobee/: BUILD.bazel  complete_robobee_input.named_vector  complete_robobee_params.named_vector  complete_robobee_plant.cc  complete_robobee_plant.h  complete_robobee_plotting_individual.py  complete_robobee_rho_sweep.cc  complete_robobee_state.named_vector  complete_robobee_test.cc  complete_robobee_tolerance_sweep.cc  complete_robobee_traj.cc  plotting_complete_robobee_rho_sweep.py  run_complete_robobee_rho_sweep.cc
examples/complete_robobee/output/: snopt_u_0.txt  snopt_x_0.txt
examples/complete_robobee/output/basic/: admm_header_0.txt  admm_output_0.txt  admm_traj_0.txt  admm_u_0.txt  admm_x_0.txt  ipopt_header_0.txt  ipopt_output_0.txt  ipopt_u_0.txt  ipopt_x_0.txt  snopt_header_0.txt  snopt_u_0.txt  snopt_x_0.txt
examples/complete_robobee/output/random/: admm_header_0.txt  admm_header_1.txt  admm_header_10.txt  admm_header_11.txt  admm_header_12.txt  admm_header_13.txt  admm_header_14.txt  admm_header_15.txt  admm_header_16.txt  admm_header_17.txt  admm_header_18.txt  admm_header_19.txt  admm_header_2.txt  admm_header_3.txt  admm_header_4.txt  admm_header_5.txt  admm_header_6.txt  admm_header_7.txt  admm_header_8.txt  admm_header_9.txt  admm_output_0.txt  admm_output_1.txt  admm_output_10.txt  admm_output_11.txt  admm_output_12.txt  admm_output_13.txt  admm_output_14.txt  admm_output_15.txt  admm_output_16.txt  admm_output_17.txt  admm_output_18.txt  admm_output_19.txt  admm_output_2.txt  admm_output_3.txt  admm_output_4.txt  admm_output_5.txt  admm_output_6.txt  admm_output_7.txt  admm_output_8.txt  admm_output_9.txt  (+180 more)
examples/kuka_iiwa_arm/controlled_kuka/: BUILD.bazel  controlled_kuka_demo.cc  obstacle.urdf  plotting_alg_compare_multiple.py  plotting_ee_trajectories.py  plotting_rho_sweep.py  rho_results_plotting.py  run_kuka_arm_alg_compare.cc  run_kuka_arm_main.cc  run_kuka_arm_tests.cc  run_kuka_arm_tests_obstacles.cc  run_kuka_arm_tests_obstacles_simplified.cc  run_kuka_arm_tests_rho_sweep.cc  run_kuka_arm_tests_robust.cc  visualize_kuka_solutions.cc
examples/kuka_iiwa_arm/controlled_kuka/figures/: kuka_arm_boxplot.eps  kuka_arm_rho_sweep.eps
examples/kuka_iiwa_arm/controlled_kuka/older_files/: controlled_kuka_demo.cc  plotting.py  plotting_alg_compare.py  plotting_animated.py  plotting_kuka_arm_rho_sweep.py  plotting_rho_sweep.py  rho_results_plotting.py  rho_results_plotting_older.py  rho_sweep_plotting_v2.py  run_kuka_arm_tests.cc  run_kuka_arm_tests_rho_sweep.cc
examples/kuka_iiwa_arm/controlled_kuka/output/: R.txt  plotting.py
examples/quadrotor/: BUILD.bazel  al_ineq_toy_example.py  plotting_quadrotor_alg_compare_individual.py  plotting_quadrotor_alg_compare_multiple.py  plotting_quadrotor_rho_sweep.py  plotting_snopt_ipopt_individual.py  plotting_snopt_ipopt_tests.py  run_all_quadrotor_test_rhos.cc  run_all_quadrotor_test_tolerances.cc  run_quadrotor_admm.cc  run_quadrotor_admm_accel.cc  run_quadrotor_admm_accel_ellipses.cc  run_quadrotor_admm_forest.cc  run_quadrotor_admm_v2.cc  run_quadrotor_alg_compare.cc  run_quadrotor_alg_compare_obstacles.cc  run_quadrotor_main.cc  run_quadrotor_rho_sweep.cc  run_quadrotor_scaling.cc  run_quadrotor_snopt_ipopt_tests.cc  temporary_writeup.tex  toy_example_norms_zero_1.eps
examples/quadrotor/figures/: quad_rho_sweep.eps  quad_rho_sweep_obstacles.eps  quad_traj_obs_interp_3.eps  toy_admm_iterations_2.eps  toy_admm_norms_1.eps  toy_admm_norms_2.eps  toy_ali_iterations_1.eps  toy_ali_iterations_2.eps  toy_example_iterations_ineq.eps  toy_example_iterations_zero.eps  toy_example_norms_ineq.eps  toy_example_norms_zero.eps
examples/quadrotor/old_files/: al_ineq_toy_complement.py  run_all_quadrotor_tests.cc  run_quadrotor_admm_accel.cc  run_quadrotor_al_test.cc  run_quadrotor_rho_sweep_obstacles.cc  run_quadrotor_scaling.cc  run_quadrotor_tolerance_sweep.cc  toy_example_iterations_zero_1.eps
examples/quadrotor/old_files/figures/: toy_admm_iterations_1.eps  toy_ali_norms_1.eps  toy_ali_norms_2.eps
examples/quadrotor/output/: G.txt  admm_u_original.txt  admm_x_original.txt  obstacles.txt  quadrotor_obstacles_admm_u_0.txt  quadrotor_obstacles_admm_u_0_params.txt  quadrotor_obstacles_admm_u_original.txt  quadrotor_obstacles_admm_x_0.txt  quadrotor_obstacles_admm_x_0_params.txt  quadrotor_obstacles_admm_x_original.txt  quadrotor_obstacles_ipopt_u_0.txt  quadrotor_obstacles_ipopt_u_0_params.txt  quadrotor_obstacles_ipopt_x_0.txt  quadrotor_obstacles_ipopt_x_0_params.txt  quadrotor_obstacles_snopt_u_0.txt  quadrotor_obstacles_snopt_u_0_params.txt  quadrotor_obstacles_snopt_x_0.txt  quadrotor_obstacles_snopt_x_0_params.txt
examples/quadrotor/output/accel/: accel_admm_header_0.txt  accel_admm_u_0.txt  accel_admm_x_0.txt  admm_header_0.txt  admm_u_0.txt  admm_x_0.txt  ipopt_header_0.txt  ipopt_u_0.txt  ipopt_x_0.txt  obstacles.txt  obstacles_ellipse.txt  quadrotor_obstacles_admm_u_0.txt  quadrotor_obstacles_admm_u_0_params.txt  quadrotor_obstacles_admm_u_original.txt  quadrotor_obstacles_admm_x_0.txt  quadrotor_obstacles_admm_x_0_params.txt  quadrotor_obstacles_admm_x_original.txt  quadrotor_obstacles_ipopt_u_0.txt  quadrotor_obstacles_ipopt_u_0_params.txt  quadrotor_obstacles_ipopt_x_0.txt  quadrotor_obstacles_ipopt_x_0_params.txt  quadrotor_obstacles_snopt_u_0_params.txt  quadrotor_obstacles_snopt_x_0_params.txt  single_run_accel_admm_y.txt  single_run_accel_weighted_admm_y.txt  single_run_admm_y.txt  single_run_weighted_y.txt  snopt_header_0.txt  snopt_u_0.txt  snopt_x_0.txt  (+3 more)
examples/robobee/: BUILD.bazel  double_stage_boxplot.eps  input_example.eps  robobee_input.named_vector  robobee_params.named_vector  robobee_plant.cc  robobee_plant.h  robobee_plotting_individual.py  robobee_plotting_multiple.py  robobee_state.named_vector  robobee_test.cc  robobee_traj.cc  single_stage_boxplot.eps  states_example.eps  testing_transfer_function.py  traj_example.eps
examples/robobee/output/: ipopt_header_0.txt  ipopt_output_0.txt  ipopt_u_0.txt  ipopt_x_0.txt  snopt_header_0.txt
(+7750 files in other folders)
