# -*- python -*-

load(
    "//tools:drake.bzl",
    "drake_cc_binary",
    "drake_cc_googletest",
    "drake_cc_library",
)
load("//tools/install:install_data.bzl", "install_data")
load("//tools/lint:lint.bzl", "add_lint_tests")

package(
    default_visibility = [
        "//visibility:public",
    ],
)

drake_cc_library(
    name = "quadrotor_plant",
    srcs = ["quadrotor_plant.cc"],
    hdrs = ["quadrotor_plant.h"],
    deps = [
        "//common:default_scalars",
        "//math:geometric_transform",
        "//math:gradient",
        "//systems/controllers:linear_quadratic_regulator",
        "//systems/framework:leaf_system",
        "//systems/primitives:affine_system",
        "//util",
    ],
)

drake_cc_binary(
    name = "run_quadrotor_dynamics",
    srcs = ["run_quadrotor_dynamics.cc"],
    add_test_rule = 1,
    data = [":models"],
    test_rule_args = [
        "--duration=0.1",
        "--initial_height=0.051",
    ],
    deps = [
        ":quadrotor_plant",
        "//attic/multibody/parsers",
        "//attic/multibody/rigid_body_plant",
        "//attic/multibody/rigid_body_plant:drake_visualizer",
        "//common:find_resource",
        "//lcm",
        "//multibody:rigid_body_tree",
        "//multibody:rigid_body_tree_construction",
        "//systems/analysis:simulator",
        "//systems/framework:diagram",
        "//systems/primitives:constant_vector_source",
        "@gflags",
    ],
)

drake_cc_binary(
    name = "run_quadrotor_lqr",
    srcs = ["run_quadrotor_lqr.cc"],
    add_test_rule = 1,
    data = [":models"],
    test_rule_args = [
        "-simulation_trials=2",
        "-simulation_real_time_rate=0.0",
    ],
    deps = [
        ":quadrotor_plant",
        "//attic/multibody/parsers",
        "//attic/multibody/rigid_body_plant",
        "//attic/multibody/rigid_body_plant:drake_visualizer",
        "//common:find_resource",
        "//common:is_approx_equal_abstol",
        "//lcm",
        "//multibody:rigid_body_tree",
        "//multibody:rigid_body_tree_construction",
        "//systems/analysis:simulator",
        "//systems/framework:diagram",
        "@gflags",
    ],
)

drake_cc_googletest(
    name = "quadrotor_dynamics_test",
    data = [":models"],
    deps = [
        ":quadrotor_plant",
        "//attic/multibody/parsers",
        "//attic/multibody/rigid_body_plant",
        "//common:find_resource",
        "//common/test_utilities:eigen_matrix_compare",
        "//multibody:rigid_body_tree_construction",
        "//systems/analysis:simulator",
        "//systems/framework:diagram",
        "//systems/framework/test_utilities",
        "//systems/primitives:constant_vector_source",
    ],
)


drake_cc_binary(
    name = "run_quadrotor_admm",
    srcs = ["run_quadrotor_admm.cc"],
    deps = [
        ":quadrotor_plant",
	"//math:wrap_to",
	"//systems/framework:system",
	"//systems/framework:context",
        "//systems/analysis:simulator",
	"//systems/primitives:linear_system",
        "//systems/primitives:trajectory_source",
        "//systems/trajectory_optimization:midpoint_transcription",
        "//systems/trajectory_optimization:direct_collocation",
        "//systems/trajectory_optimization:admm_solver",
	"//solvers:snopt_solver",
	"//solvers:ipopt_solver",
        "@gflags",
    ],
)

drake_cc_binary(
    name = "run_quadrotor_admm_v2",
    srcs = ["run_quadrotor_admm_v2.cc"],
    deps = [
        ":quadrotor_plant",
	"//math:wrap_to",
	"//systems/framework:system",
	"//systems/framework:context",
        "//systems/analysis:simulator",
	"//systems/primitives:linear_system",
        "//systems/primitives:trajectory_source",
        "//systems/trajectory_optimization:midpoint_transcription",
        "//systems/trajectory_optimization:direct_collocation",
        "//systems/trajectory_optimization:admm_solver",
	"//solvers:snopt_solver",
	"//solvers:ipopt_solver",
        "@gflags",
    ],
)

drake_cc_binary(
    name = "run_quadrotor_admm_accel",
    srcs = ["run_quadrotor_admm_accel.cc"],
    deps = [
        ":quadrotor_plant",
	"//math:wrap_to",
	"//systems/framework:system",
	"//systems/framework:context",
        "//systems/analysis:simulator",
	"//systems/primitives:linear_system",
        "//systems/primitives:trajectory_source",
        "//systems/trajectory_optimization:midpoint_transcription",
        "//systems/trajectory_optimization:direct_collocation",
        "//systems/trajectory_optimization:admm_solver",
        "//systems/trajectory_optimization:accel_admm_solver",
	"//solvers:snopt_solver",
	"//solvers:ipopt_solver",
        "@gflags",
    ],
)


drake_cc_binary(
    name = "run_quadrotor_admm_accel_ellipses",
    srcs = ["run_quadrotor_admm_accel_ellipses.cc"],
    copts = ["-Wno-error=unused-function"],
    deps = [
        ":quadrotor_plant",
	"//math:wrap_to",
	"//systems/framework:system",
	"//systems/framework:context",
        "//systems/analysis:simulator",
	"//systems/primitives:linear_system",
        "//systems/primitives:trajectory_source",
        "//systems/trajectory_optimization:midpoint_transcription",
        "//systems/trajectory_optimization:direct_collocation",
        "//systems/trajectory_optimization:admm_solver",
        "//systems/trajectory_optimization:accel_admm_solver",
	"//systems/trajectory_optimization:admm_solver_weighted",
	"//systems/trajectory_optimization:accel_weighted_admm_solver",
	"//solvers:snopt_solver",
	"//solvers:ipopt_solver",
        "@gflags",
    ],
)


drake_cc_binary(
    name = "run_quadrotor_admm_forest",
    srcs = ["run_quadrotor_admm_forest.cc"],
    copts = ["-Wno-error=unused-function", "-Wno-error=unused-variable"],
    deps = [
        ":quadrotor_plant",
	"//math:wrap_to",
	"//systems/framework:system",
	"//systems/framework:context",
        "//systems/analysis:simulator",
	"//systems/primitives:linear_system",
        "//systems/primitives:trajectory_source",
        "//systems/trajectory_optimization:midpoint_transcription",
        "//systems/trajectory_optimization:direct_collocation",
        "//systems/trajectory_optimization:admm_solver",
        "//systems/trajectory_optimization:accel_admm_solver",
	"//systems/trajectory_optimization:admm_solver_weighted",
	"//systems/trajectory_optimization:accel_weighted_admm_solver",
	"//solvers:snopt_solver",
	"//solvers:ipopt_solver",
        "@gflags",
    ],
)

drake_cc_binary(
    name = "run_compare_algs",
    srcs = ["run_compare_algs.cc"],
    copts = ["-Wno-error=unused-function", "-Wno-error=unused-variable"],
    deps = [
        ":quadrotor_plant",
	"//math:wrap_to",
	"//systems/framework:system",
	"//systems/framework:context",
        "//systems/analysis:simulator",
	"//systems/primitives:linear_system",
        "//systems/primitives:trajectory_source",
        "//systems/trajectory_optimization:midpoint_transcription",
        "//systems/trajectory_optimization:direct_collocation",
        "//systems/trajectory_optimization:admm_solver",
        "//systems/trajectory_optimization:accel_admm_solver",
	"//systems/trajectory_optimization:admm_solver_weighted",
	"//systems/trajectory_optimization:accel_weighted_admm_solver",
	"//systems/trajectory_optimization:al_admm_solver",
	"//solvers:snopt_solver",
	"//solvers:ipopt_solver",
        "@gflags",
    ],
)

drake_cc_binary(
    name = "run_all_quadrotor_tests",
    srcs = ["run_all_quadrotor_tests.cc"],
    copts = ["-Wno-error=unused-function", "-Wno-error=unused-variable"],
    deps = [
        ":quadrotor_plant",
	"//math:wrap_to",
	"//systems/framework:system",
	"//systems/framework:context",
        "//systems/analysis:simulator",
	"//systems/primitives:linear_system",
        "//systems/primitives:trajectory_source",
        "//systems/trajectory_optimization:midpoint_transcription",
        "//systems/trajectory_optimization:direct_collocation",
	"//systems/trajectory_optimization:admm_solver_weighted_v2",
	"//systems/trajectory_optimization:admm_solver_al",
	"//systems/trajectory_optimization:admm_solver_al_ineq",
	"//systems/trajectory_optimization:ali_solver_res",
	"//systems/trajectory_optimization:admm_solver_scaled",
	"//solvers:snopt_solver",
	"//solvers:ipopt_solver",
        "@gflags",
    ],
)

drake_cc_binary(
    name = "run_quadrotor_main",
    srcs = ["run_quadrotor_main.cc"],
    copts = ["-Wno-error=unused-function", "-Wno-error=unused-variable"],
    deps = [
        ":quadrotor_plant",
	"//math:wrap_to",
	"//systems/framework:system",
	"//systems/framework:context",
        "//systems/analysis:simulator",
	"//systems/primitives:linear_system",
        "//systems/primitives:trajectory_source",
        "//systems/trajectory_optimization:midpoint_transcription",
        "//systems/trajectory_optimization:direct_collocation",
	"//systems/trajectory_optimization:admm_solver_weighted_v2",
        "@gflags",
    ],
)

drake_cc_binary(
    name = "run_quadrotor_rho_sweep_obstacles",
    srcs = ["run_quadrotor_rho_sweep_obstacles.cc"],
    copts = ["-Wno-error=unused-function", "-Wno-error=unused-variable"],
    deps = [
        ":quadrotor_plant",
	"//math:wrap_to",
	"//systems/framework:system",
	"//systems/framework:context",
        "//systems/analysis:simulator",
	"//systems/primitives:linear_system",
        "//systems/primitives:trajectory_source",
        "//systems/trajectory_optimization:midpoint_transcription",
        "//systems/trajectory_optimization:direct_collocation",
	"//systems/trajectory_optimization:admm_solver_weighted_v2",
        "@gflags",
    ],
)

drake_cc_binary(
    name = "run_quadrotor_alg_compare",
    srcs = ["run_quadrotor_alg_compare.cc"],
    copts = ["-Wno-error=unused-function", "-Wno-error=unused-variable"],
    deps = [
        ":quadrotor_plant",
	"//math:wrap_to",
	"//systems/framework:system",
	"//systems/framework:context",
        "//systems/analysis:simulator",
	"//systems/primitives:linear_system",
        "//systems/primitives:trajectory_source",
        "//systems/trajectory_optimization:midpoint_transcription",
        "//systems/trajectory_optimization:direct_collocation",
	"//systems/trajectory_optimization:admm_solver_weighted_v2",
	"//solvers:snopt_solver",
	"//solvers:ipopt_solver",
        "@gflags",
    ],
)

drake_cc_binary(
    name = "run_quadrotor_alg_compare_obstacles",
    srcs = ["run_quadrotor_alg_compare_obstacles.cc"],
    copts = ["-Wno-error=unused-function", "-Wno-error=unused-variable"],
    deps = [
        ":quadrotor_plant",
	"//math:wrap_to",
	"//systems/framework:system",
	"//systems/framework:context",
        "//systems/analysis:simulator",
	"//systems/primitives:linear_system",
        "//systems/primitives:trajectory_source",
        "//systems/trajectory_optimization:midpoint_transcription",
        "//systems/trajectory_optimization:direct_collocation",
	"//systems/trajectory_optimization:admm_solver_weighted_v2",
	"//solvers:snopt_solver",
	"//solvers:ipopt_solver",
        "@gflags",
    ],
)


drake_cc_binary(
    name = "run_quadrotor_tolerance_sweep",
    srcs = ["run_quadrotor_tolerance_sweep.cc"],
    copts = ["-Wno-error=unused-function", "-Wno-error=unused-variable"],
    deps = [
        ":quadrotor_plant",
	"//math:wrap_to",
	"//systems/framework:system",
	"//systems/framework:context",
        "//systems/analysis:simulator",
	"//systems/primitives:linear_system",
        "//systems/primitives:trajectory_source",
        "//systems/trajectory_optimization:midpoint_transcription",
        "//systems/trajectory_optimization:direct_collocation",
	"//systems/trajectory_optimization:admm_solver_weighted_v2",
	"//solvers:snopt_solver",
	"//solvers:ipopt_solver",
        "@gflags",
    ],
)

drake_cc_binary(
    name = "run_all_quadrotor_test_tolerances",
    srcs = ["run_all_quadrotor_test_tolerances.cc"],
    copts = ["-Wno-error=unused-function", "-Wno-error=unused-variable"],
    deps = [
        ":quadrotor_plant",
	"//math:wrap_to",
	"//systems/framework:system",
	"//systems/framework:context",
        "//systems/analysis:simulator",
	"//systems/primitives:linear_system",
        "//systems/primitives:trajectory_source",
        "//systems/trajectory_optimization:midpoint_transcription",
        "//systems/trajectory_optimization:direct_collocation",
	"//systems/trajectory_optimization:admm_solver_weighted_v2",
	"//systems/trajectory_optimization:admm_solver_al",
	"//systems/trajectory_optimization:admm_solver_al_ineq",
	"//solvers:snopt_solver",
	"//solvers:ipopt_solver",
        "@gflags",
    ],
)


drake_cc_binary(
    name = "run_quadrotor_al_test",
    srcs = ["run_quadrotor_al_test.cc"],
    copts = ["-Wno-error=unused-function", "-Wno-error=unused-variable"],
    deps = [
        ":quadrotor_plant",
	"//math:wrap_to",
	"//systems/framework:system",
	"//systems/framework:context",
        "//systems/analysis:simulator",
	"//systems/primitives:linear_system",
        "//systems/primitives:trajectory_source",
        "//systems/trajectory_optimization:midpoint_transcription",
        "//systems/trajectory_optimization:direct_collocation",
	"//systems/trajectory_optimization:admm_solver_weighted_v2",
	"//systems/trajectory_optimization:admm_solver_al",
	"//systems/trajectory_optimization:admm_solver_al_ineq",
	"//solvers:snopt_solver",
	"//solvers:ipopt_solver",
        "@gflags",
    ],
)

drake_cc_binary(
    name = "run_quadrotor_scaling",
    srcs = ["run_quadrotor_scaling.cc"],
    copts = ["-Wno-error=unused-function", "-Wno-error=unused-variable"],
    deps = [
        ":quadrotor_plant",
	"//math:wrap_to",
	"//systems/framework:system",
	"//systems/framework:context",
        "//systems/analysis:simulator",
	"//systems/primitives:linear_system",
        "//systems/primitives:trajectory_source",
        "//systems/trajectory_optimization:midpoint_transcription",
        "//systems/trajectory_optimization:direct_collocation",
	"//systems/trajectory_optimization:admm_solver_weighted_v2",
	"//systems/trajectory_optimization:admm_solver_al",
	"//systems/trajectory_optimization:admm_solver_al_ineq",
	"//systems/trajectory_optimization:admm_solver_scaled",
	"//solvers:snopt_solver",
	"//solvers:ipopt_solver",
        "@gflags",
    ],
)

install_data()

add_lint_tests()
