# -*- python -*-

load(
    "//tools:drake.bzl",
    "drake_cc_binary",
    "drake_cc_library",
)
load("//tools/lint:lint.bzl", "add_lint_tests")

drake_cc_library(
    name = "controlled_kuka_trajectory",
    srcs = ["controlled_kuka_trajectory.cc"],
    hdrs = ["controlled_kuka_trajectory.h"],
    data = [
        "//manipulation/models/iiwa_description:models",
    ],
    deps = [
        "//attic/multibody/parsers",
        "//common/trajectories:piecewise_polynomial",
        "//multibody:inverse_kinematics",
    ],
)

drake_cc_binary(
    name = "controlled_kuka_demo",
    srcs = ["controlled_kuka_demo.cc"],
    add_test_rule = 1,
    data = [
        "//examples/kuka_iiwa_arm:models",
        "//manipulation/models/iiwa_description:models",
    ],
    deps = [
        ":controlled_kuka_trajectory",
        "//common:find_resource",
        "//examples/kuka_iiwa_arm:iiwa_common",
        "//lcm",
        "//manipulation/util:sim_diagram_builder",
        "//systems/analysis:simulator",
        "//systems/controllers:inverse_dynamics_controller",
        "//systems/primitives:trajectory_source",
        "@gflags",
    ],
)

drake_cc_binary(
    name = "run_kuka_arm_tests",
    srcs = ["run_kuka_arm_tests.cc"],
    copts = ["-Wno-error=unused-function", "-Wno-error=unused-variable"],
    data = [
        "//examples/kuka_iiwa_arm:models",
        "//manipulation/models/iiwa_description:models",
    ],
    deps = [
        ":controlled_kuka_trajectory",
        "//common:find_resource",
        "//examples/kuka_iiwa_arm:iiwa_common",
        "//geometry:geometry_visualization",
        "//geometry:scene_graph",
        "//lcm",
        "//manipulation/util:sim_diagram_builder",
        "//multibody/multibody_tree/multibody_plant",
        "//multibody/multibody_tree/parsing:multibody_plant_sdf_parser",
        "//systems/analysis:simulator",
        "//systems/controllers:inverse_dynamics_controller",
        "//systems/primitives:trajectory_source",
	"//systems/trajectory_optimization:midpoint_transcription",
	"//systems/trajectory_optimization:admm_solver_weighted_v2",
	"//systems/trajectory_optimization:admm_solver_al",
	"//systems/trajectory_optimization:admm_solver_al_ineq",
        "@gflags",
    ],
)


drake_cc_binary(
    name = "run_kuka_arm_tests_obstacles_simplified",
    srcs = ["run_kuka_arm_tests_obstacles_simplified.cc"],
    copts = ["-Wno-error=unused-function", "-Wno-error=unused-variable"],
    data = [
        "//examples/kuka_iiwa_arm:models",
        "//manipulation/models/iiwa_description:models",
    ],
    deps = [
        ":controlled_kuka_trajectory",
        "//common:find_resource",
        "//examples/kuka_iiwa_arm:iiwa_common",
        "//geometry:geometry_visualization",
        "//geometry:scene_graph",
        "//lcm",
        "//manipulation/util:sim_diagram_builder",
        "//multibody/multibody_tree/multibody_plant",
        "//multibody/multibody_tree/parsing:multibody_plant_sdf_parser",
        "//systems/analysis:simulator",
        "//systems/controllers:inverse_dynamics_controller",
        "//systems/primitives:trajectory_source",
	"//systems/trajectory_optimization:midpoint_transcription",
	"//systems/trajectory_optimization:admm_solver_weighted_v2",
	"//systems/trajectory_optimization:admm_solver_al",
	"//systems/trajectory_optimization:admm_solver_al_ineq",
        "@gflags",
    ],
)

drake_cc_binary(
    name = "run_kuka_arm_tests_obstacles",
    srcs = ["run_kuka_arm_tests_obstacles.cc"],
    copts = ["-Wno-error=unused-function", "-Wno-error=unused-variable"],
    data = [
        "//examples/kuka_iiwa_arm:models",
        "//manipulation/models/iiwa_description:models",
    ],
    deps = [
        ":controlled_kuka_trajectory",
        "//common:find_resource",
        "//examples/kuka_iiwa_arm:iiwa_common",
        "//geometry:geometry_visualization",
        "//geometry:scene_graph",
        "//lcm",
        "//manipulation/util:sim_diagram_builder",
        "//multibody/multibody_tree/multibody_plant",
        "//multibody/multibody_tree/parsing:multibody_plant_sdf_parser",
        "//systems/analysis:simulator",
        "//systems/controllers:inverse_dynamics_controller",
        "//systems/primitives:trajectory_source",
	"//systems/trajectory_optimization:midpoint_transcription",
	"//systems/trajectory_optimization:admm_solver_weighted_v2",
	"//systems/trajectory_optimization:admm_solver_al",
	"//systems/trajectory_optimization:admm_solver_al_ineq",
        "@gflags",
    ],
)


drake_cc_binary(
    name = "run_kuka_arm_tests_robust",
    srcs = ["run_kuka_arm_tests_robust.cc"],
    copts = ["-Wno-error=unused-function", "-Wno-error=unused-variable"],
    data = [
        "//examples/kuka_iiwa_arm:models",
        "//manipulation/models/iiwa_description:models",
    ],
    deps = [
        ":controlled_kuka_trajectory",
        "//common:find_resource",
        "//examples/kuka_iiwa_arm:iiwa_common",
        "//geometry:geometry_visualization",
        "//geometry:scene_graph",
        "//lcm",
        "//manipulation/util:sim_diagram_builder",
        "//multibody/multibody_tree/multibody_plant",
        "//multibody/multibody_tree/parsing:multibody_plant_sdf_parser",
        "//systems/analysis:simulator",
        "//systems/controllers:inverse_dynamics_controller",
        "//systems/primitives:trajectory_source",
	"//systems/trajectory_optimization:midpoint_transcription",
	"//systems/trajectory_optimization:admm_solver_weighted_v2",
	"//systems/trajectory_optimization:admm_solver_al",
	"//systems/trajectory_optimization:admm_solver_al_ineq",
        "@gflags",
    ],
)

drake_cc_binary(
    name = "run_kuka_arm_tests_rho_sweep",
    srcs = ["run_kuka_arm_tests_rho_sweep.cc"],
    copts = ["-Wno-error=unused-function", "-Wno-error=unused-variable"],
    data = [
        "//examples/kuka_iiwa_arm:models",
        "//manipulation/models/iiwa_description:models",
    ],
    deps = [
        ":controlled_kuka_trajectory",
        "//common:find_resource",
        "//examples/kuka_iiwa_arm:iiwa_common",
        "//geometry:geometry_visualization",
        "//geometry:scene_graph",
        "//lcm",
        "//manipulation/util:sim_diagram_builder",
        "//multibody/multibody_tree/multibody_plant",
        "//multibody/multibody_tree/parsing:multibody_plant_sdf_parser",
        "//systems/analysis:simulator",
        "//systems/controllers:inverse_dynamics_controller",
        "//systems/primitives:trajectory_source",
	"//systems/trajectory_optimization:midpoint_transcription",
	"//systems/trajectory_optimization:admm_solver_weighted_v2",
	"//systems/trajectory_optimization:admm_solver_al",
	"//systems/trajectory_optimization:admm_solver_al_ineq",
        "@gflags",
    ],
)

drake_cc_binary(
    name = "run_kuka_arm_alg_compare",
    srcs = ["run_kuka_arm_alg_compare.cc"],
    copts = ["-Wno-error=unused-function", "-Wno-error=unused-variable"],
    data = [
        "//examples/kuka_iiwa_arm:models",
        "//manipulation/models/iiwa_description:models",
    ],
    deps = [
        ":controlled_kuka_trajectory",
        "//common:find_resource",
        "//examples/kuka_iiwa_arm:iiwa_common",
        "//geometry:geometry_visualization",
        "//geometry:scene_graph",
        "//lcm",
        "//manipulation/util:sim_diagram_builder",
        "//multibody/multibody_tree/multibody_plant",
        "//multibody/multibody_tree/parsing:multibody_plant_sdf_parser",
        "//systems/analysis:simulator",
        "//systems/controllers:inverse_dynamics_controller",
        "//systems/primitives:trajectory_source",
	"//systems/trajectory_optimization:midpoint_transcription",
	"//systems/trajectory_optimization:admm_solver_weighted_v2",
        "@gflags",
    ],
)

drake_cc_binary(
    name = "visualize_kuka_solutions",
    srcs = ["visualize_kuka_solutions.cc"],
    data = [
        "//examples/kuka_iiwa_arm:models",
        "//manipulation/models/iiwa_description:models",
    ],
    deps = [
        ":controlled_kuka_trajectory",
        "//common:find_resource",
        "//examples/kuka_iiwa_arm:iiwa_common",
        "//geometry:geometry_visualization",
        "//geometry:scene_graph",
        "//lcm",
        "//manipulation/util:sim_diagram_builder",
        "//multibody/multibody_tree/multibody_plant",
        "//multibody/multibody_tree/parsing:multibody_plant_sdf_parser",
        "//systems/analysis:simulator",
        "//systems/controllers:inverse_dynamics_controller",
        "//systems/primitives:trajectory_source",
	"//systems/trajectory_optimization:midpoint_transcription",
        "@gflags",
    ],
)


drake_cc_binary(
    name = "controlled_kuka_multibody_demo",
    srcs = ["controlled_kuka_multibody_demo.cc"],
    add_test_rule = 1,
    data = [
        "//examples/kuka_iiwa_arm:models",
        "//manipulation/models/iiwa_description:models",
    ],
    deps = [
        ":controlled_kuka_trajectory",
        "//common:find_resource",
        "//examples/kuka_iiwa_arm:iiwa_common",
        "//geometry:geometry_visualization",
        "//geometry:scene_graph",
        "//lcm",
        "//multibody/multibody_tree/multibody_plant",
        "//multibody/multibody_tree/parsing:multibody_plant_sdf_parser",
        "//systems/analysis:simulator",
        "//systems/controllers:inverse_dynamics_controller",
        "//systems/primitives:trajectory_source",
        "@gflags",
    ],
)

add_lint_tests()
